[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Александр Титов <avtitov@hex.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
